# grpc-opengl-multiplayer

./: CMakeLists.txt  README.md
protos/: multiplayer_scene.proto
shaders/: Mesh_Vertex.vs
src/: CMakeLists.txt  helper.cc
src/client/: graphics.cpp  graphics.h  main.cpp  multiplayer_scene_client.cc  multiplayer_scene_client.h
src/server/: multiplayer_scene_server.cc
